--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.4) unstable; urgency=low
+
+  * Really uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 17 May 2013 13:54:19 +0000
+
 openstack-meta-packages (0.3) experimental; urgency=low
 
   * Uploading to unstable.
