--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.5) unstable; urgency=low
+
+  * Fixed the nova-consoleproxy dependency.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 23 May 2013 16:46:17 +0800
+
 openstack-meta-packages (0.4) unstable; urgency=low
 
   * Really uploading to unstable.
