--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.7) UNRELEASED; urgency=low
+
+  * Added missing python-heatclient dependency.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 23 Jun 2013 18:47:53 +0000
+
 openstack-meta-packages (0.6) unstable; urgency=low
 
   * Removed nova-api from the openstack-compute-node package, since the way to
