--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 openstack-meta-packages (0.7) UNRELEASED; urgency=low
 
   * Added missing python-heatclient dependency.
+  * Adds ceilometer-alarm-evaluator & ceilometer-alarm-notifier to the
+    openstack-proxy-node package.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 23 Jun 2013 18:47:53 +0000
 
