--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ openstack-meta-packages (0.7) UNRELEASED; urgency=low
   * Added mongodb-10gen-unstable, mongodb-nightly, mongodb-stable,
     mongodb-unstable and mongodb-10gen as possible candidates to replace
     mongodb.
+  * Added a new openstack-deploy package.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 23 Jun 2013 18:47:53 +0000
 
