--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.9) unstable; urgency=medium
+
+  * Updated Vcs-Git URL.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 14 Jul 2014 13:49:22 +0800
+
 openstack-meta-packages (0.8) unstable; urgency=medium
 
   * Uploading to unstable.
