--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 openstack-meta-packages (0.11) unstable; urgency=medium
 
   * Removed libplrpc-perl from the list of packages to purge in openstack-purge
+  * Added nova-compute-qemu as possible package instead of nova-compute-kvm.
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 14 Oct 2014 23:08:40 +0800
 
