--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.12) UNRELEASED; urgency=medium
+
+  * Added scripts to do automatic network configuration of the proxy node.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 22 Oct 2014 01:13:08 +0800
+
 openstack-meta-packages (0.11) unstable; urgency=medium
 
   * Removed libplrpc-perl from the list of packages to purge in openstack-purge
