Fixed --shared option when deploying proxy network.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.13) UNRELEASED; urgency=medium
+
+  * Fixed --shared option when deploying proxy network.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
+
 openstack-meta-packages (0.12) unstable; urgency=medium
 
   * Added scripts to do automatic network configuration of the proxy node.
