--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-meta-packages (0.13) unstable; urgency=medium
+
+  * Removed openvswitch-datapath-dkms from recommends.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 11 Jun 2015 14:04:46 +0000
+
 openstack-meta-packages (0.12) unstable; urgency=medium
 
   * Added scripts to do automatic network configuration of the proxy node.
