--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
-openstack-meta-packages (0.13) UNRELEASED; urgency=medium
+openstack-meta-packages (0.14) UNRELEASED; urgency=medium
 
   * Fixed --shared option when deploying proxy network.
   * Fixed ssh user for cirros in openstack-deploy-tempest.
-  * Removed openvswitch-datapath-dkms from recommends.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
+
+openstack-meta-packages (0.13) unstable; urgency=medium
+
+  * Removed openvswitch-datapath-dkms from recommends.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 11 Jun 2015 14:04:46 +0000
 
 openstack-meta-packages (0.12) unstable; urgency=medium
 
