--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-openstack-meta-packages (0.14) UNRELEASED; urgency=medium
+openstack-meta-packages (0.14) experimental; urgency=medium
 
   * Fixed --shared option when deploying proxy network.
   * Fixed ssh user for cirros in openstack-deploy-tempest.
+  * Switched to using liberty instead of Kilo.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
 
