--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ openstack-meta-packages (0.14) experimental; urgency=medium
   * Fixed ssh user for cirros in openstack-deploy-tempest.
   * Switched to using liberty instead of Kilo.
   * Also setting OS_PROJECT_NAME in openrc.sh.
+  * Fixed --is-public=True -> --visibility public when adding a new image.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
 
