--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ openstack-meta-packages (0.14) experimental; urgency=medium
   * Switched to using liberty instead of Kilo.
   * Also setting OS_PROJECT_NAME in openrc.sh.
   * Fixed --is-public=True -> --visibility public when adding a new image.
+  * Manualy create the cinder v1 service and endpoint (the Cinder package
+    currently only creates the cinderv2 service.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
 
