--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ openstack-meta-packages (0.14) experimental; urgency=medium
   * Defines the alt user and tenant correctly.
   * Fixed compute image_ssh_user.
   * Do not set public_router_id at all (this adds failures).
+  * Added the setup of swift.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 16 May 2015 07:26:45 +0200
 
