--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 openstack-meta-packages (0.15) UNRELEASED; urgency=medium
 
   * Update to mitaka instead of liberty.
+  * Generating /etc/openstack-tempest-ci/openstack-ci.list dynamically to
+    pickup Debian and OpenStack release names from pkgos.conf if it exists.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 29 Jan 2016 11:48:15 +0800
 
