--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ openstack-meta-packages (0.15) UNRELEASED; urgency=medium
     pickup Debian and OpenStack release names from pkgos.conf if it exists.
   * Removed activation of ec2 lib in preseed, as it's gone away from upstream
     code in Nova.
+  * Added 14 new python-*client in the openstack-clients metapackage.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 29 Jan 2016 11:48:15 +0800
 
