* Also handling novaapi db from debconf (disable manual setup).   * Disabled installation of 8 more services until tempest is fixed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ openstack-meta-packages (0.15) UNRELEASED; urgency=medium
   * Added support for IPMI Debian Live provisionning of Tempest CI.
   * Added the automatic installation of: designate, barbican, manila,
     mistral, trove, congress, sahara, murano.
+  * Also handling novaapi db.
 
   [ Ondřej Nový ]
   * Fixed VCS URLs (https).
