--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ openstack-meta-packages (0.15) UNRELEASED; urgency=medium
 
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
+  * Bumped debhelper compat version to 10
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 26 Sep 2016 19:05:08 +0200
 
